# Yo_Ballot_Client

./: index.html  package-lock.json  package.json
Client/src/: index.css
Client/src/api/: voterlogin.ts
Client/src/app/: store.ts
Client/src/components/: candidate_card.tsx  nav.tsx  overview.tsx  tab.tsx
Client/src/config/: index.ts
Client/src/pages/: home.tsx
Client/src/types/: store.types.ts
Client/src/utils/: scroll.ts
Server/: .env  db.sqlite3  manage.py  pyproject.toml
Server/Voter/: admin.py  models.py  serializers.py
Server/Voter/migrations/: 0001_initial.py  0002_alter_voter_phone_number_alter_voter_reg_no.py  0003_alter_voter_email_alter_voter_phone_number_and_more.py
Server/requirements/: base.txt  local.txt  production.txt
Server/yo_ballot/: asgi.py  urls.py  wsgi.py
Server/yo_ballot/settings/: base.py  local.py
src/: App.tsx  index.css  main.tsx
src/api/: voterlogin.ts  voting_init.ts
src/app/: store.ts
src/components/: candidate_card.tsx  count_down.tsx  header.tsx  overview.tsx  tab_menu.tsx  tablist.tsx  tabs.tsx  voter_menu_tab.tsx
src/features/: voterSlice.ts  votesSlice.ts
src/hooks/: scroll.ts  store_hooks.ts
src/interfaces/: candidate.interfaces.ts  voter.interfaces.ts  votes.interfaces.ts
src/pages/: 404.tsx  auth.tsx  home.tsx  vote.tsx
src/types/: responses.types.ts  store.types.ts
